--- a/server/.env.example
+++ b/server/.env.example
@@ -1,10 +1,12 @@
 # Server Port
 PORT=5000
 
-# Supabase Configuration
-# Get these from: https://app.supabase.com/project/_/settings/api
-SUPABASE_URL=your_supabase_project_url
-SUPABASE_ANON_KEY=your_supabase_anon_key
+# MongoDB Configuration
+# Get your connection string from MongoDB Atlas
+MONGO_URI=your_mongodb_connection_string
+
+# JWT secret for signing auth tokens
+JWT_SECRET=super_secret_key
 
 # Alpha Vantage API Key
 # Get free key from: https://www.alphavantage.co/support/#api-key
